# pypfire

./: README.md  __init__.py  cli.py  core.py  index.html  pyproject.toml
